deployment_nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    type: endpoints-app
spec:
  replicas: 3
  selector:
    matchLabels:
      role: hello
  template:
    metadata:
      labels:
        role: hello
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    role: hello
